--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         
         # Create directories
         mkdir -p /data/plugins
-        mkdir -p /data/plugins/Multiverse-Core
+        #mkdir -p /data/plugins/Multiverse-Core
         
         # Copy plugins (only if not already present)
         if [ ! -f /data/plugins/Multiverse-Core.jar ]; then
@@ -20,10 +20,10 @@ services:
         fi
         
         # Copy configs (only if not already present)
-        if [ ! -f /data/plugins/Multiverse-Core/config.yml ]; then
-          echo 'Copying configurations...'
-          cp -r /setup/config/* /data/plugins/
-        fi
+        #if [ ! -f /data/plugins/Multiverse-Core/config.yml ]; then
+        #  echo 'Copying configurations...'
+        #  cp -r /setup/config/* /data/plugins/
+        #fi
         
         # Create eula.txt
         echo 'eula=true' > /data/eula.txt
@@ -36,7 +36,7 @@ services:
     mem_limit: 4.5G
 
   minecraft:
-    image: marctv/minecraft-papermc-server:latest
+    image: marctv/minecraft-papermc-server:1.21.5
     depends_on:
       - setup
     environment:
