--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "25565:25565"
     volumes:
       - mc-data:/data
+      - ./plugins.txt:/plugins.txt
     restart: unless-stopped
 volumes:
   mc-data: {}
